Update and fix for use _EditLocked

--- a/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-list.tpl.html
+++ b/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-list.tpl.html
@@ -1,7 +1,7 @@
 <div class="domain-alc-rules--list panel panel-default form" ng-form="editFormACLRules">
   <div class="panel-heading">
     <div class="pull-right panel-button-right">
-      <button class="btn btn-primary btn-sm" ng-click="$ctrl.onAddNewRule($event)" popover-trigger="mouseenter" popover-placement="left" uib-popover="Click here to add a new access control condition to the list">
+      <button class="btn btn-primary btn-sm" ng-class="{'disabled':_isEditLocked}" ng-click="$ctrl.onAddNewRule($event)" popover-trigger="mouseenter" popover-placement="left" uib-popover="Click here to add a new access control condition to the list">
        <i class="glyphicon glyphicon-plus"></i>
       </button>
     </div>
