--- a/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
+++ b/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
@@ -9,7 +9,7 @@
               <i class="glyphicon glyphicon-chevron-down"></i>
             </a>
           </span>
-    <span id="addNewBackendBlock" ng-click="$ctrl.onAddNewBackendBlock()" class="btn btn-primary btn-sm pull-right" ng-class="{'disabled': isEditLocked}" title="Add New Backend Block"><i class="glyphicon glyphicon-plus"></i></span>
+    <span id="addNewBackendBlock" ng-click="$ctrl.onAddNewBackendBlock()" class="btn btn-primary btn-sm pull-right" ng-class="{'disabled': _isEditLocked}" title="Add New Backend Block"><i class="glyphicon glyphicon-plus"></i></span>
     <h4><b>Backends</b></h4>
   </div>
   <div class="panel-body">
@@ -25,8 +25,8 @@
               <a class="btn btn-default btn-xs" href="" title="Expand Block" ng-show="item.$$backendBlockState.isCollapsed" ng-click="item.$$backendBlockState.isCollapsed = !item.$$backendBlockState.isCollapsed">
                 <i class="glyphicon glyphicon-chevron-down"></i>
               </a>
-              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpBackendBlock(item)" ng-class="{'disabled': isEditLocked}"><i class="glyphicon glyphicon-arrow-up" title="Move One Position Up"></i></a>
-              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownBackendBlock(item)" ng-class="{'disabled': isEditLocked}"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
+              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpBackendBlock(item)" ng-class="{'disabled': _isEditLocked}"><i class="glyphicon glyphicon-arrow-up" title="Move One Position Up"></i></a>
+              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownBackendBlock(item)" ng-class="{'disabled': _isEditLocked}"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
             </div>
             <div class="pull-right panel-button-right">
               <!-- remove widget -->
