--- a/code/dev/parts/domains/domain-waf-actions-list/domain-waf-actions-list.tpl.html
+++ b/code/dev/parts/domains/domain-waf-actions-list/domain-waf-actions-list.tpl.html
@@ -2,7 +2,7 @@
   <div class="panel panel-default">
     <!-- Default panel contents -->
     <div class="panel-heading"> WAF Actions
-      <button type="button" class="btn btn-xs btn-success pull-right" ng-disable="$ctrl.loading || _isEditLocked" ng-click="$ctrl.onAddNew($event)"
+      <button type="button" class="btn btn-xs btn-success pull-right" ng-disabled="$ctrl.loading || _isEditLocked" ng-click="$ctrl.onAddNew($event)"
         title="Add New Action"><i class="glyphicon glyphicon-plus"></i> Add New</button>
     </div>
     <!-- Table -->
