--- a/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
+++ b/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
@@ -35,10 +35,10 @@
             </div>
           </td>
           <td>
-            <a href="" class="btn btn-default btn-xs" ng-click="$ctrl.onUpWAFRule(item)" ng-if="!item.loading" uib-tooltip="Up WAF Rule">
+            <a href="" ng-class="{'disabled':_isEditLocked}" class="btn btn-default btn-xs" ng-click="$ctrl.onUpWAFRule(item)" ng-if="!item.loading" uib-tooltip="Up WAF Rule">
               <i class="glyphicon glyphicon-arrow-up"></i>
             </a>
-            <a href="" class="btn btn-default btn-xs" ng-click="$ctrl.onDownWAFRule(item)" ng-if="!item.loading" uib-tooltip="Down WAF Rule">
+            <a href="" ng-class="{'disabled':_isEditLocked}" class="btn btn-default btn-xs" ng-click="$ctrl.onDownWAFRule(item)" ng-if="!item.loading" uib-tooltip="Down WAF Rule">
               <i class="glyphicon glyphicon-arrow-down"></i>
             </a>
           </td>
