--- a/code/dev/parts/domains/end-user-response-headers/end-user-response-headers.tpl.html
+++ b/code/dev/parts/domains/end-user-response-headers/end-user-response-headers.tpl.html
@@ -38,13 +38,13 @@
           </td>
           <td ng-click="editRow.isSelectedIndex = $index">
             <span ng-animate-disabled ng-show="editRow.isSelectedIndex!==$index">{{$ctrl.headerOperations[line.operation]}}</span>
-            <select ng-animate-disabled ng-if="editRow.isSelectedIndex==$index" class="form-control" ng-model="line.operation" ng-options="key as label for (key,label) in $ctrl.headerOperations"></select>
+            <select ng-animate-disabled ng-if="editRow.isSelectedIndex==$index" ng-disabled="_isEditLocked" class="form-control" ng-model="line.operation" ng-options="key as label for (key,label) in $ctrl.headerOperations"></select>
           </td>
           <td>
             <button class="btn btn-primary btn-sm btn-edit-origin_request_header" type="button" ng-disabled="_isEditLocked" ng-click="editRow.isSelectedIndex=$index" title="Edit Header" ng-if="editRow.isSelectedIndex!==$index">
               <i class="glyphicon glyphicon-remove"> Edit </i>
             </button>
-            <button class="btn btn-success btn-sm btn-edit-origin_request_header" type="button" ng-click="editRow.isSelectedIndex =null" title="Save Header" ng-if="editRow.isSelectedIndex==$index" ng-disabled="_isEditLocked || editRow.$invalid">
+            <button class="btn btn-success btn-sm btn-edit-origin_request_header" type="button" ng-click="editRow.isSelectedIndex =null" title="Save Header" ng-if="editRow.isSelectedIndex==$index" ng-disabled="editRow.$invalid">
               <i class="glyphicon glyphicon-ok">  Ok  </i>
             </button>
             <button class="btn btn-warning btn-sm btn-delete-origin_request_header" type="button" ng-disabled="_isEditLocked" ng-click="$ctrl.onDelete($index)" title="Delete Header">
