Update Edge Cache Reports - add Secondary Cache

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -368,6 +368,7 @@
   <script type="text/javascript" src="js/portal/reports/chart/d3PieChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/requestsChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/hitsCacheChart.directive.js"></script>
+  <script type="text/javascript" src="js/portal/reports/chart/hitsSecondaryCacheChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/httpStatusCodeChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/httpHttpsChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/requestStatusChart.directive.js"></script>
