Add new functional test for GitHub Integration

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -20,7 +20,7 @@
          <div class="form-group" ng-class="{'has-error': editForm.newGitHubUrlDomainConfigurationFile.$invalid && editForm.newGitHubUrlDomainConfigurationFile.$dirty}">
                 <label for="newGitHubUrlDomainConfigurationFile" class="col-sm-3 control-label">GitHub URL For Domain Configuration File *</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control inline-block" ng-disabled="_loading" validate-url-json-file ng-model="newGitHubIntegrationSettings.github_url" id="newGitHubUrlDomainConfigurationFile" name="newGitHubUrlDomainConfigurationFile" placeholder="GitHub URL" ng-maxlength="300" required>
+                  <input type="text" class="form-control inline-block" ng-disabled="_loading" validate-url-json-file ng-model="newGitHubIntegrationSettings.github_url" id="gitHubUrlDomainConfigurationFile" name="newGitHubUrlDomainConfigurationFile" placeholder="GitHub URL" ng-maxlength="300" required>
                   <label for="newGitHubUrlDomainConfigurationFile" class="text-info" popover-append-to-body="false" popover-placement="left"  popover-trigger="mouseenter" uib-popover="Provide here a GitHub URL pointing to a JSON file holding the domain’s configuration. The initial version of the configuration file can be taken from the ‘Advanced Mode’ window.">
                     <i class="fa fa-question-circle"></i>
                   </label>
@@ -29,14 +29,14 @@
                   </div>
                 </div>
               </div>
-              <div class="form-group" ng-class="{'has-error': editForm.newGitHubIntegrationSettings.$invalid && editForm.newGitHubIntegrationSettings.$dirty}">
-                <label for="newGitHubIntegrationSettings" class="col-sm-3 control-label">GitHub Personal API Access Token *</label>
+              <div class="form-group" ng-class="{'has-error': editForm.newGitHubPersonalAPIToken.$invalid && editForm.newGitHubPersonalAPIToken.$dirty}">
+                <label for="newGitHubPersonalAPIToken" class="col-sm-3 control-label">GitHub Personal API Access Token *</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control inline-block" validate-github-personal-access-token ng-disabled="_loading" ng-model="newGitHubIntegrationSettings.github_personal_api_key" id="newGitHubIntegrationSettings" name="newGitHubIntegrationSettings" placeholder="GitHub Personal API Access Token" ng-maxlength="40" required>
-                  <label for="newGitHubIntegrationSettings" class="text-info" popover-append-to-body="false" popover-placement="left"  popover-trigger="mouseenter" uib-popover="Specify here GitHub Personal API Access Token generated via GitHub's UI (page https://github.com/settings/tokens) and granted with permissions to access the domain configuration file">
+                  <input type="text" class="form-control inline-block" validate-github-personal-access-token ng-disabled="_loading" ng-model="newGitHubIntegrationSettings.github_personal_api_key" id="gitHubPersonalAPIToken" name="newGitHubPersonalAPIToken" placeholder="GitHub Personal API Access Token" ng-maxlength="40" required>
+                  <label for="newGitHubPersonalAPIToken" class="text-info" popover-append-to-body="false" popover-placement="left"  popover-trigger="mouseenter" uib-popover="Specify here GitHub Personal API Access Token generated via GitHub's UI (page https://github.com/settings/tokens) and granted with permissions to access the domain configuration file">
                     <i class="fa fa-question-circle"></i>
                   </label>
-                  <div class="error-messages" ng-messages="editForm.newGitHubIntegrationSettings.$error" role="alert" ng-messages-multiple>
+                  <div class="error-messages" ng-messages="editForm.newGitHubPersonalAPIToken.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
                 </div>
@@ -85,7 +85,7 @@
                 domain’s configuration via the UI in read-only mode.">
                   <i class="fa fa-question-circle"></i>
                 </label>
-                <button ng-click="onManageGitHubIntegration($event)" class="btn btn-primary spaced-button" ng-class="{'btn-disabled':isReadOnly() || model.github_integration.enable !=true }" ng-disabled="_loading || isReadOnly() || model.github_integration.enable !=true"
+                <button id="btnManageGitHubIntegration" ng-click="onManageGitHubIntegration($event)" class="btn btn-primary spaced-button" ng-class="{'btn-disabled':isReadOnly() || model.github_integration.enable !=true }" ng-disabled="_loading || isReadOnly() || model.github_integration.enable !=true"
                   popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover=" ">
                     <i class="fa fa-lock"></i>&nbsp;Manage GitHub Integration
                   </button>
