--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -67,14 +67,23 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>Mobile/Desktop Ratio</h3>
+              <h3 class="graph-title inline-block">Mobile/Desktop Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['mobileDesktopRatio']" uib-popover-html="::popoverHelpHTML['mobileDesktopRatio']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="mobileDesktopRatio"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>Edge Cache Hit/Miss Ratio</h3>
+              <h3 class="graph-title inline-block">Edge Cache Hit/Miss Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['cacheStatus']" uib-popover-html="::popoverHelpHTML['cacheStatus']" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+                popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="cacheStatus"></div>
               </div>
@@ -86,14 +95,24 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>HTTP Status Codes Ratio</h3>
+              <h3 class="graph-title inline-block">HTTP Status Codes Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['statusCode']" uib-popover-html="::popoverHelpHTML['statusCode']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="statusCode"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>Top 10 Countries</h3>
+              <h3 class="graph-title inline-block">Top 10 Countries</h3>
+              <label ng-if="!!popoverHelpHTML['country']" uib-popover-html="::popoverHelpHTML['country']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="country"></div>
               </div>
@@ -105,14 +124,24 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>Top 20 US States By Traffic</h3>
+              <h3 class="graph-title inline-block">Top 20 US States By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['usa_states']" uib-popover-html="::popoverHelpHTML['usa_states']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="usa_states" ng-chart-options="stateTraffChartOptions"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>HTTP/HTTPS Requests Ratio</h3>
+              <h3 class="graph-title inline-block">HTTP/HTTPS Requests Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['protocol']" uib-popover-html="::popoverHelpHTML['protocol']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="protocol"></div>
               </div>
@@ -123,14 +152,24 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>HTTP Methods</h3>
+              <h3 class="graph-title inline-block">HTTP Methods</h3>
+              <label ng-if="!!popoverHelpHTML['httpMethod']" uib-popover-html="::popoverHelpHTML['httpMethod']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="httpMethod"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>Top 10 HTTP Content Types</h3>
+              <h3 class="graph-title inline-block">Top 10 HTTP Content Types</h3>
+              <label ng-if="!!popoverHelpHTML['contentType']" uib-popover-html="::popoverHelpHTML['contentType']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="contentType"></div>
               </div>
@@ -141,14 +180,24 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>Top 10 OS</h3>
+              <h3 class="graph-title inline-block">Top 10 OS</h3>
+              <label ng-if="!!popoverHelpHTML['os']" uib-popover-html="::popoverHelpHTML['os']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="os"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>Top 10 Devices</h3>
+              <h3 class="graph-title inline-block">Top 10 Devices</h3>
+              <label ng-if="!!popoverHelpHTML['device']" uib-popover-html="::popoverHelpHTML['device']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="device"></div>
               </div>
@@ -160,14 +209,24 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>Top 10 Browsers</h3>
+              <h3 class="graph-title inline-block">Top 10 Browsers</h3>
+              <label ng-if="!!popoverHelpHTML['browser']" uib-popover-html="::popoverHelpHTML['browser']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="browser"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>QUIC/Non-QUIC Ratio</h3>
+              <h3 class="graph-title inline-block">QUIC/Non-QUIC Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['quic']" uib-popover-html="::popoverHelpHTML['quic']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="quic"></div>
               </div>
@@ -178,14 +237,24 @@
           <div class="row">
 
             <div class="col-md-6">
-              <h3>H2/H2C/Non-HTTP2 Ratio</h3>
+              <h3 class="graph-title inline-block">H2/H2C/Non-HTTP2 Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['http2']" uib-popover-html="::popoverHelpHTML['http2']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="http2"></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <h3>Request Completion Success/Failure Ratio</h3>
+              <h3 class="graph-title inline-block">Request Completion Success/Failure Ratio</h3>
+              <label ng-if="!!popoverHelpHTML['requestStatus']" uib-popover-html="::popoverHelpHTML['requestStatus']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+                popover-hoverable="false" popover-placement="right">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="requestStatus"></div>
               </div>
