--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -1,4 +1,9 @@
-<h3 style="margin-top: 0;" class="title-chart">Average FBT</h3>
+<h3 style="margin-top: 0;" class="graph-title inline-block">Average FBT</h3>
+<label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon"
+  popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+  popover-hoverable="false" popover-placement="right">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="clearfix"  ng-show="flOs && flCountry && flDevice">
   <div class="pull-right">
 
