--- a/code/dev/parts/reports/charts/fbt-heatmap.html
+++ b/code/dev/parts/reports/charts/fbt-heatmap.html
@@ -1,4 +1,8 @@
-<h3 style="margin-top: 0;">FBT Heatmap</h3>
+<h3 class="graph-title inline-block">FBT Heatmap</h3>
+<label ng-if="!!popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right" uib-popover-html="::popoverHelpHTML">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="clearfix">
   <div class="pull-right">
 
