--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -1,4 +1,8 @@
-<h3 style="margin-top: 0;">{{ heading }}</h3>
+<h3 class="graph-title inline-block">{{ heading }}</h3>
+<label ng-if="!!popoverHelpHTML"  uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="clearfix">
   <div class="pull-right">
     <!-- ng-hide="!ngDomain" -->
