--- a/code/dev/parts/reports/charts/traffic-common.html
+++ b/code/dev/parts/reports/charts/traffic-common.html
@@ -1,7 +1,7 @@
-<h3 class="reports_charts_title inline-block">{{ heading }}</h3>
-  <label ng-if="!!popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right" uib-popover-html="::popoverHelpHTML">
-    <i class="fa fa-question-circle" aria-hidden="true"></i>
-  </label>
+<h3 class="reports_charts_title graph-title inline-block">{{ heading }}</h3>
+<label ng-if="!!popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right" uib-popover-html="::popoverHelpHTML">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="clearfix"
      filter-time-periods
      ng-disabled="!ngDomain"
