--- a/code/dev/parts/reports/top/top-404.html
+++ b/code/dev/parts/reports/top/top-404.html
@@ -1,4 +1,8 @@
-<h3>Top '404 Not Found' Objects</h3>
+<h3 class="graph-title inline-block">Top '404 Not Found' Objects</h3>
+<label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="clearfix" style="margin-bottom: 8px;"
      filter-top-objects
      ng-disabled="!ngDomain"
