--- a/code/dev/parts/reports/heatmaps.html
+++ b/code/dev/parts/reports/heatmaps.html
@@ -46,7 +46,11 @@
       </div>
       <div class="panel panel-default" style="margin-bottom: 5px;">
         <div class="panel-heading">
-          <h4 style="margin: 0;">Hits Heatmap</h4>
+          <h4 class="graph-title inline-block">Hits Heatmap</h4>
+          <label ng-if="!!popoverHelpHTML['worldHitsHeatmap']" uib-popover-html="::popoverHelpHTML['worldHitsHeatmap']" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+            popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
+            <i class="fa fa-question-circle" aria-hidden="true"></i>
+          </label>
         </div>
         <div class="panel-body">
 
@@ -61,7 +65,12 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 style="margin: 0;">GBT Heatmap</h4>
+          <h4 class="graph-title inline-block">GBT Heatmap</h4>
+          <label ng-if="!!popoverHelpHTML['worldGBTHeatmap']" uib-popover-html="::popoverHelpHTML['worldGBTHeatmap']" class="text-info graph-help-icon"
+            popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter"
+            popover-hoverable="false" popover-placement="right">
+            <i class="fa fa-question-circle" aria-hidden="true"></i>
+          </label>
         </div>
         <div class="panel-body">
 
