--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -90,7 +90,12 @@
               </div>
               <div class="col-sm-12 col-md-6">
                 <div class="col-sm-12 _nd-block">
-                  <h3>Edge Cache Hit/Miss Ratio</h3>
+                  <h3 class="graph-title inline-block">Edge Cache Hit/Miss Ratio</h3>
+                  <label ng-if="!!popoverHelpHTML['cacheStatus']" uib-popover-html="::popoverHelpHTML['cacheStatus']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="right">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                   <div>
                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="vm.cacheStatus"></div>
                   </div>
@@ -110,7 +115,12 @@
               </div>
               <div class="col-sm-12 col-md-6">
                 <div class="col-sm-12 _nd-block">
-                  <h3>Secondary Cache Hit/Miss Ratio</h3>
+                  <h3 class="graph-title inline-block">Secondary Cache Hit/Miss Ratio</h3>
+                  <label ng-if="!!popoverHelpHTML['secondaryCacheStatusData']" uib-popover-html="::popoverHelpHTML['secondaryCacheStatusData']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="right">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                   <div>
                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="vm.secondaryCacheStatusData"></div>
                   </div>
