--- a/code/dev/parts/reports/imageengine-analytics/imageengine-linechart-bytes-saved.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics/imageengine-linechart-bytes-saved.tpl.html
@@ -1,6 +1,6 @@
 <h3 class="reports_charts_title graph-title inline-block">{{ heading }}</h3>
 <label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
-  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
+  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
   <i class="fa fa-question-circle" aria-hidden="true"></i>
 </label>
 <div class="clearfix" filter-hours-periods ng-disabled="!ngDomain" is-loading="_loading" fl-os="flOs" fl-country="flCountry"
