--- a/code/dev/parts/reports/imageengine-analytics/imageengine-solidgauge-performance-improvement.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics/imageengine-solidgauge-performance-improvement.tpl.html
@@ -1,8 +1,10 @@
-<h3 class="reports_charts_title graph-title inline-block">{{ heading }}</h3>
-<label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
-  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
-  <i class="fa fa-question-circle" aria-hidden="true"></i>
-</label>
+<div class="reports_charts_title h3 graph-title inline-block" _style="width:90%">{{ heading }}
+  <label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" style="font-size: 14px;" class="text-info graph-help-icon"
+    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+    popover-placement="top">
+    <i class="fa fa-question-circle" aria-hidden="true"></i>
+  </label>
+</div>
 <div class="clearfix" filter-hours-periods ng-disabled="!ngDomain" is-loading="_loading" fl-os="flOs" fl-country="flCountry"
   fl-device="flDevice" fl-browser="flBrowser" ng-filters="filters" on-filter="reload()"></div>
 <div class="auto-scroll">
