--- a/code/dev/parts/waf-analytics/directives/waf-security-events.tpl.html
+++ b/code/dev/parts/waf-analytics/directives/waf-security-events.tpl.html
@@ -1,4 +1,9 @@
-<h3 class="waf_charts_title">{{ heading }}</h3>
+<h3 class="waf_charts_title graph-title inline-block">{{ heading }}</h3>
+<label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon"
+  popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+  popover-placement="top">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="clearfix" waf-filter-security-events ng-disabled="!ngDomain" fl-country="flCountry" fl-zones="flZones" ng-filters="filters"
   on-filter="reload()"></div>
 <div class="auto-scroll">
