--- a/code/dev/parts/waf-analytics/directives/waf-top-attacked-urls.tpl.html
+++ b/code/dev/parts/waf-analytics/directives/waf-top-attacked-urls.tpl.html
@@ -1,5 +1,9 @@
-<h3>Top Attacked URLs</h3>
-<div class="clearfix" style="margin-bottom: 8px;" waf-filter-top-objects ng-disabled="!ngDomain" fl-country="flCountry" ng-filters="filters"
+<h3 class="graph-title inline-block">Top Attacked URLs</h3>
+<label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
+<div class="clearfix" waf-filter-top-objects ng-disabled="!ngDomain" fl-country="flCountry" ng-filters="filters"
   on-filter="loadDetails()"></div>
 <div class="alert alert-info" ng-if="!_loading && !items.length">
   No data to display
