--- a/code/dev/parts/dns_analytics/dns-queries-line-chart/dns-queries-line-chart.tpl.html
+++ b/code/dev/parts/dns_analytics/dns-queries-line-chart/dns-queries-line-chart.tpl.html
@@ -1,4 +1,8 @@
-<label class="title graph-title h4">{{heading}}</label>
+<div class="h4 title graph-title inline-block">{{heading}}</div>
+<label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+  popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+  <i class="fa fa-question-circle" aria-hidden="true"></i>
+</label>
 <div class="panel-body">
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="dnsZoneData" ng-chart-options="chartOptions"></div>
 </div>
